--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 node_modules
+/notes-app/node_modules
+/playground/node_modules
+/weather-app/node_modules
+/web-server/node_modules
+/web-server/.git
