trying to ignore node modules

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 node_modules
-\notes-app\node_modules
-\playground\node_modules
-\weather-app\node_modules
-\web-server\node_modules
-\web-server\.git
+.\weather-app\node_modules
+.\playground\node_modules
+.\web-server\node_modules
+.\notes-app\node_modules
+.vscode
+
+.\web-server\.git
